--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.0",
+    "jquery-bar-rating": "^1.2.2",
     "popper.js": "^1.16.1",
     "rateyo": "^2.3.5"
   },
